--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<div>
+	<img class="moviePic" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT_9nrOnN8sYfZZHJ06EIBSoEO5qjx7uHHEs6VtKNplGVuGhZuC" alt="image">
+</div>
+	<p class="movieDetail">
+		it a good movie
+	</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
